@@ -1,11 +1,10 @@
-from pyjamas import Window
 from pyjamas.ui.RootPanel import RootPanel
 from pyjamas.ui.Button import Button
+from pyjamas import Window
 
 def greet(sender):
     Window.alert("Hello, AJAX!")
 
-class Hello:
-    def onModuleLoad(self):
-        b = Button("Click me", greet)
-        RootPanel().add(b)
+if __name__ == '__main__':
+    b = Button("Click me", greet)
+    RootPanel().add(b)
