@@ -20,3 +20,8 @@ class OnClickTest:
 
 
 
+
+
+if __name__ == '__main__':
+    app = OnClickTest()
+    app.onModuleLoad()
